--- a/E-commerce/Backend/Backend.csproj
+++ b/E-commerce/Backend/Backend.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared-ViewModels\Shared-ViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
