--- a/E-commerce/Ecommerce-Customers-Site/Ecommerce-Customers-Site.csproj
+++ b/E-commerce/Ecommerce-Customers-Site/Ecommerce-Customers-Site.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -6,5 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Ecommerce_Customers_Site</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\assets\images\Logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shared-ViewModels\Shared-ViewModels.csproj" />
+  </ItemGroup>
 
 </Project>
