--- a/E-commerce/Ecommerce-Customers-Site/appsettings.json
+++ b/E-commerce/Ecommerce-Customers-Site/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "BaseUri": "https://localhost:7260/"
+  }
 }
