--- a/E-commerce/Ecommerce-Admin-Site/package.json
+++ b/E-commerce/Ecommerce-Admin-Site/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.5.1",
     "@mui/x-data-grid": "^6.20.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
